--- a/javascript/package.json
+++ b/javascript/package.json
@@ -19,6 +19,9 @@
   "bugs": {
     "url": "https://github.com/emilybache/GildedRose-Refactoring-Kata/issues"
   },
+  "scripts": {
+      "run:app": "node src/main.js"
+  },
   "homepage": "https://github.com/emilybache/GildedRose-Refactoring-Kata",
   "devDependencies": {
     "@babel/core": "^7.14.0",
